# AIDE_data_core

./: .gitignore  PROJECT_STRUCTURE.md  requirements.txt  test_db_connection.py  test_notion_simple.py
.claude/: BEGINNER_GUIDE.md  CLAUDE.md  README.md  settings.json
.claude/commands/: add-feature.md  check-db.md  deploy-check.md  explain-code.md  fix-imports.md  help-commands.md  learn-basics.md  pipeline-status.md  quick-save.md  run-crawler.md  setup-env.md  show-data.md  start.md  sync-from-github.md  sync-work.md  test-all.md  troubleshoot.md  what-next.md  which-pc.md
aide-api/: .env.example  PROJECT_4_SUMMARY.md  README.md  pyproject.toml
aide-api/aide_api/: __init__.py  main.py
aide-api/aide_api/config/: __init__.py
aide-api/aide_api/dependencies/: __init__.py  database.py
aide-api/aide_api/routers/: __init__.py  kdi.py  news.py  ratings.py
aide-api/tests/: __init__.py  conftest.py  test_kdi_router.py  test_main.py  test_news_router.py  test_ratings_router.py
aide-crawlers/: .env.example  .gitignore  PROJECT_2_IMPLEMENTATION_SUMMARY.md  PROJECT_2_PHASE_3_SUMMARY.md  README.md  pyproject.toml
aide-crawlers/aide_crawlers/crawlers/base/: __init__.py  base_crawler.py
aide-crawlers/aide_crawlers/crawlers/credit_rating/: __init__.py  kisrating.py  korearatings.py
aide-crawlers/aide_crawlers/crawlers/naver/: __init__.py  news_api.py
aide-crawlers/aide_crawlers/crawlers/research/: __init__.py  kdi_policy.py
aide-crawlers/aide_crawlers/sinks/: __init__.py  abstract.py  db_sink.py  local_sink.py
aide-crawlers/aide_crawlers/tests/: conftest.py
aide-crawlers/aide_crawlers/tests/test_sinks/: test_local_sink.py
aide-crawlers/aide_crawlers/tests/test_utils/: test_normalize.py
aide-crawlers/aide_crawlers/utils/: __init__.py  dedup.py  logger.py  normalize.py  validation.py
aide-crawlers/examples/: example_credit_rating_crawler.py  example_kdi_crawler.py
aide-data-engine/: .env.example  PROJECT_3_SUMMARY.md  README.md  pyproject.toml
aide-data-engine/aide_data_engine/: __init__.py
aide-data-engine/aide_data_engine/config/: __init__.py
aide-data-engine/aide_data_engine/pipeline/: __init__.py  processor.py
aide-data-engine/aide_data_engine/services/: __init__.py  classification.py  deduplication.py  embedding.py  representative.py
aide-data-engine/aide_data_engine/utils/: __init__.py
aide-data-pipeline/: README.md  pyproject.toml
aide-data-pipeline/aide_pipeline/: __init__.py  __main__.py  config.py  orchestrator.py
aide-data-pipeline/aide_pipeline/jobs/: __init__.py
aide-data-pipeline/config/: schedule.yaml
aide-data-pipeline/tests/: __init__.py
aide-preprocessing/: .env.example  .gitignore  README.md  pyproject.toml
aide-preprocessing/aide_preprocessing/: __init__.py  pipeline.py
aide-preprocessing/aide_preprocessing/processors/: __init__.py  deduplicator.py  hash_generator.py  source_extractor.py  text_cleaner.py
aide-preprocessing/aide_preprocessing/storage/: __init__.py  db_writer.py
aide-preprocessing/tests/: __init__.py
docs/: NOTION_SETUP_GUIDE.md  QUICK_START_NOTION.md  README_NOTION_KEYWORDS.md
scripts/: classify_and_upload_hybrid.py  classify_and_upload_with_clustering.py
scripts/backup/: classify_and_upload.backup_before_ai.py  upload_today_headlines.backup_old.py
scripts/classification/: README.md  ai_classifier.py  ai_clustering_service.py  classify_and_upload.py  clustering_service.py  upload_today_headlines.py
scripts/crawling/: README.md  crawl_and_save_news.py  crawl_naver_api.py  crawl_naver_news_bulk.py  crawl_naver_news_section.py  crawl_paper_headlines.py  run_all_crawlers.py  simple_crawl.py
scripts/preprocessing/: README.md  preprocess_news.py
scripts/utils/: README.md  check_and_clear_db.py  check_db_only.py  export_db_to_excel.py  measure_pipeline_timing.py  notion_keywords.py  scheduler.py  test_notion_keywords.py  verify_classification.py
