[tool.poetry]
name = "aide-crawlers"
version = "0.1.0"
description = "AIDE Platform - Data Collection Service"
authors = ["AIDE Team <team@aide-platform.com>"]
readme = "README.md"
packages = [{include = "aide_crawlers"}]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
# AIDE Data Core (local dependency)
aide-data-core = {path = "../aide-data-core", develop = true}

# HTTP Clients
httpx = "^0.25.0"
requests = "^2.31.0"

# Web Scraping
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.0"
selenium = "^4.15.0"

# Data Processing
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Utilities
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
tenacity = "^8.2.0"

# Logging
structlog = "^23.2.0"

# Excel/CSV
openpyxl = "^3.1.2"
pandas = "^2.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.12.0"
responses = "^0.24.0"
black = "^23.12.0"
isort = "^5.13.0"
mypy = "^1.7.0"
flake8 = "^7.0.0"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=aide_crawlers --cov-report=term-missing --cov-report=html"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
