[tool.poetry]
name = "aide-preprocessing"
version = "0.1.0"
description = "Data preprocessing for AIDE news articles"
authors = ["AIDE Team"]
readme = "README.md"
packages = [{include = "aide_preprocessing"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
